--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/WPI-SNAP/Iteration1#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "knex": "^0.15.2",
     "mysql": "^2.16.0",
     "npm": "^6.4.1"
   }
