--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "path": "^0.12.7"
   }
 }
