--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "gitignore": "^0.6.0",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "path": "^0.12.7"
