--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "gitignore": "^0.6.0",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "path": "^0.12.7"
