--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "aws-sdk": "^2.363.0",
     "body-parser": "^1.18.3",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "gitignore": "^0.6.0",
